bcfg2: update to 1.1.1 and indicate that this is noarch; see #27351
git-svn-id: https://svn.macports.org/repository/macports/trunk@73577 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/bcfg2/Portfile
+++ b/dports/sysutils/bcfg2/Portfile
@@ -5,10 +5,12 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                bcfg2
-version             1.0.1
+version             1.1.1
 categories          sysutils python
 maintainers         gmail.com:sol.jerome
 license             BSD
+supported_archs     noarch
+
 description         Bcfg2 configuration management system
 long_description    Bcfg2 helps system administrators deploy complex \
                     changes across large numbers of systems in a \
@@ -18,9 +20,8 @@ homepage            http://www.bcfg2.org/
 platforms           darwin
 master_sites        ftp://ftp.mcs.anl.gov/pub/bcfg
 
-checksums           md5     6fbf36acc5cc58b2504a25c25cad3921 \
-                    sha1    36cac49009c906d4cb61e36a7a8c7b6859518862 \
-                    rmd160  fae98b10b721d059a9a483e046b83bd61458179d
+checksums           sha1    c0214d28796805ff8e3522d348914f366ba860aa \
+                    rmd160  2b7d8dfc2e14d1a2def743fe525ee91c5a3d3342
 
 patchfiles          patch-setup.py.diff
 
