--- a/dports/science/clustalx/Portfile
+++ b/dports/science/clustalx/Portfile
@@ -4,9 +4,10 @@
 PortSystem          1.0
 
 name                clustalx
-version             2.0.12
+version             2.1
 categories          science
 maintainers         snc openmaintainer
+license             LGPL
 description         An interface for the ClustalW multiple sequence alignment\
                     program.
 long_description    ${name} provides an integrated environment for performing\
@@ -20,31 +21,29 @@ long_description    ${name} provides an integrated environment for performing\
 homepage            http://www.clustal.org/
 
 platforms           darwin
-depends_build       port:qt4-x11
+depends_build       port:qt4-mac
 
 master_sites        http://www.clustal.org/download/current/ \
                     ftp://ftp.ebi.ac.uk/pub/software/clustalw2/${version}/
 
-checksums           md5     98abaca7056b5f88003f88831129606c \
-                    sha1    f2c5e3450769f384ff6d1725c124d48ba54b975e \
-                    rmd160  8496a865acf7dbf935052bcdc0377bb2ce32baed
+checksums           md5     d0501fb354d03b361f9feaf4bbd33f6e \
+                    sha1    1a39b8ce0222b7658c1eaa177356b25c12742a8b
 
-configure.cmd       ${prefix}/libexec/qt4-x11/bin/qmake
+configure.cmd       ${prefix}/bin/qmake
 configure.pre_args  PREFIX=${prefix}
-configure.args      -macx
 
 destroot {
-    xinstall -d ${destroot}${prefix}/libexec/${name}/
+    xinstall -d ${destroot}${applications_dir}/${name}.app/Contents/MacOS
+    xinstall -d ${destroot}${applications_dir}/${name}.app/Contents/Resources
+    eval xinstall -m 755 [glob ${worksrcpath}/${name}.app/Contents/MacOS/*] \
+        ${destroot}${applications_dir}/${name}.app/Contents/MacOS/
+    eval xinstall -m 755 [glob ${worksrcpath}/${name}.app/Contents/Resources/*] \
+        ${destroot}${applications_dir}/${name}.app/Contents/Resources/
     xinstall -m 644 -W ${worksrcpath} \
         colprot.xml coldna.xml colprint.xml clustalx.hlp \
-        ${destroot}${prefix}/libexec/${name}/
-    xinstall -m 755 ${worksrcpath}/${name} ${destroot}${prefix}/libexec/${name}/
-
-    xinstall -m 755 ${filespath}/clustalx.in ${destroot}${prefix}/bin/${name}
-    reinplace s|@PREFIX@|${prefix}|g ${destroot}${prefix}/bin/${name}
-    reinplace s|@NAME@|${name}|g ${destroot}${prefix}/bin/${name}
+        ${destroot}${applications_dir}/${name}.app/Contents/MacOS/
 }
 
 livecheck.type      regex
 livecheck.url       ${homepage}
-livecheck.regex     "currently (\\d+\\.\\d+\\.\\d+)"
+livecheck.regex     "currently (\\d+(\\.\\d+)+)"
