remove with_default_names variants and link unprefixed binaries in a separate directory (#20748)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73585 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/m4/Portfile
+++ b/dports/devel/m4/Portfile
@@ -4,6 +4,7 @@ PortSystem		1.0
 
 name            m4
 version         1.4.15
+revision        1
 categories      devel
 maintainers     blair openmaintainer
 platforms       darwin
@@ -37,18 +38,13 @@ post-destroot {
 	xinstall -d ${destroot}${docdir}
 	xinstall -m 0644 -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS README THANKS \
 		TODO ${destroot}${docdir}
+
+    xinstall -m 755 -d ${destroot}${prefix}/libexec/gnubin
+    foreach binary [glob -tails -directory ${destroot}${prefix}/bin g*] {
+        ln -s ${prefix}/bin/${binary} ${destroot}${prefix}/libexec/gnubin/[string range $binary 1 end]
+    }
 }
 
 test.run        yes
 test.target     check
 test.env        TMPDIR=/tmp
-
-variant with_default_names description {Install files without 'g' prefix} {
-    post-destroot {
-        foreach {d} {bin share/man/man1} {
-            foreach {f} [glob -tails -directory ${destroot}${prefix}/${d} g*] {
-                ln -sf ${prefix}/${d}/${f} ${destroot}${prefix}/${d}/[string range ${f} 1 end]
-            }
-        }
-    }
-}
