--- a/dports/net/gnetcat/Portfile
+++ b/dports/net/gnetcat/Portfile
@@ -6,6 +6,7 @@ PortSystem      1.0
 name            gnetcat
 set my_name     netcat
 version         0.7.1
+revision        1
 homepage        http://netcat.sourceforge.net/
 description     A rewrite of the well-known networking tool, but more portable, with new features and fully GNU compliant.
 long_description \
@@ -45,32 +46,29 @@ set docdir  ${prefix}/share/doc/${my_name}-${version}
 test.run    yes
 test.target check
 
-variant with_default_names description {Install files without 'g' prefix} {
-    configure.args-delete --program-prefix=g
-}
-
 post-configure {
     # prefix the shortname
-    if { ! [variant_isset with_default_names] } {
-        reinplace "s|netcat_nc = \$(DESTDIR)\$(bindir)/nc|netcat_nc = \$(DESTDIR)\$(bindir)/gnc|" ${worksrcpath}/src/Makefile
-        reinplace "s|ln -s netcat \$(netcat_nc);|ln -s gnetcat \$(netcat_nc);|" ${worksrcpath}/src/Makefile
-    }
+    reinplace "s|netcat_nc = \$(DESTDIR)\$(bindir)/nc|netcat_nc = \$(DESTDIR)\$(bindir)/gnc|" ${worksrcpath}/src/Makefile
+    reinplace "s|ln -s netcat \$(netcat_nc);|ln -s gnetcat \$(netcat_nc);|" ${worksrcpath}/src/Makefile
 }
 
 post-destroot {
-    if { ! [variant_isset with_default_names] } {
-        # prefix the info files
-        foreach {f} [glob -tails -directory ${destroot}${prefix}/share/info *.info] {
-            move ${destroot}${prefix}/share/info/${f} ${destroot}${prefix}/share/info/g${f}
-        }
-        # prefix the locale files
-        foreach {d} [glob -tails -directory ${destroot}${prefix}/share/locale */] {
-            foreach {f} [glob -tails -directory ${destroot}${prefix}/share/locale/${d}/LC_MESSAGES *.mo] {
-                move ${destroot}${prefix}/share/locale/${d}/LC_MESSAGES/${f} ${destroot}${prefix}/share/locale/${d}/LC_MESSAGES/g${f}
-            }
+    # prefix the info files
+    foreach {f} [glob -tails -directory ${destroot}${prefix}/share/info *.info] {
+        move ${destroot}${prefix}/share/info/${f} ${destroot}${prefix}/share/info/g${f}
+    }
+    # prefix the locale files
+    foreach {d} [glob -tails -directory ${destroot}${prefix}/share/locale */] {
+        foreach {f} [glob -tails -directory ${destroot}${prefix}/share/locale/${d}/LC_MESSAGES *.mo] {
+            move ${destroot}${prefix}/share/locale/${d}/LC_MESSAGES/${f} ${destroot}${prefix}/share/locale/${d}/LC_MESSAGES/g${f}
         }
     }
-    
+
+    xinstall -m 755 -d ${destroot}${prefix}/libexec/gnubin
+    foreach binary [glob -tails -directory ${destroot}${prefix}/bin g*] {
+        ln -s ${prefix}/bin/${binary} ${destroot}${prefix}/libexec/gnubin/[string range $binary 1 end]
+    }
+
     # create and copy the port docs
     xinstall -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} ABOUT-NLS AUTHORS COPYING ChangeLog INSTALL NEWS README TODO \
