--- a/dports/sysutils/coreutils/Portfile
+++ b/dports/sysutils/coreutils/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            coreutils
 version         8.5
+revision        1
 categories      sysutils
 platforms       darwin
 maintainers     nox openmaintainer
@@ -52,6 +53,11 @@ post-destroot {
     xinstall -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS README \
         THANKS THANKS-to-translators TODO ${destroot}${docdir}
+
+    xinstall -m 755 -d ${destroot}${prefix}/libexec/gnubin
+    foreach binary [glob -tails -directory ${destroot}${prefix}/bin g*] {
+        ln -s ${prefix}/bin/${binary} ${destroot}${prefix}/libexec/gnubin/[string range $binary 1 end]
+    }
 }
 
 # Set the RUN_EXPENSIVE_TESTS environmental variable to 'yes' to run more
@@ -59,14 +65,3 @@ post-destroot {
 # to 'yes' to run even more expensive tests.
 test.run        yes
 test.target     check
-
-variant with_default_names description \
-        {Install files without 'g' prefix, use with extreme caution} {
-    post-destroot {
-        foreach {d} {bin share/man/man1} {
-            foreach {f} [glob -tails -directory ${destroot}${prefix}/${d} g*] {
-                ln -sf ${f} ${destroot}${prefix}/${d}/[string range ${f} 1 end]
-            }
-        }
-    }
-}
