--- a/dports/sysutils/diffutils/Portfile
+++ b/dports/sysutils/diffutils/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 
 name                diffutils
 version             3.0
+revision            1
 categories          sysutils textproc devel
 license             GPL-3+
 maintainers         nomaintainer
@@ -36,21 +37,15 @@ post-destroot {
     xinstall -m 0755 -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} ABOUT-NLS AUTHORS ChangeLog COPYING NEWS README THANKS \
         ${destroot}${docdir}
+
+    xinstall -m 755 -d ${destroot}${prefix}/libexec/gnubin
+    foreach binary [glob -tails -directory ${destroot}${prefix}/bin g*] {
+        ln -s ${prefix}/bin/${binary} ${destroot}${prefix}/libexec/gnubin/[string range $binary 1 end]
+    }
 }
 
 test.run        yes
 test.target     check
-
-variant with_default_names description {Install files without 'g' prefix} {
-    post-destroot {
-        foreach d {bin share/info share/man/man1} {
-            foreach a [glob -directory ${destroot}${prefix}/$d g*] {
-                regexp /g(.+)\$ $a dummy b
-                file link -hard ${destroot}${prefix}/$d/$b $a
-            }
-        }
-    }
-}
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnu.org/gnu/${name}/?C=M&O=D
