--- a/dports/sysutils/findutils/Portfile
+++ b/dports/sysutils/findutils/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            findutils
 version         4.4.2
+revision        1
 categories      sysutils
 platforms       darwin
 maintainers     nox openmaintainer
@@ -40,14 +41,9 @@ post-destroot {
     xinstall -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS README \
         THANKS TODO ${destroot}${docdir}
-}
 
-variant with_default_names description {Install files without 'g' prefix} {
-    post-destroot {
-        foreach {d} {bin libexec share/info share/man/man1 share/man/man5} {
-            foreach {f} [glob -tails -directory ${destroot}${prefix}/${d} g*] {
-                ln -sf ${f} ${destroot}${prefix}/${d}/[string range ${f} 1 end]
-            }
-        }
+    xinstall -m 755 -d ${destroot}${prefix}/libexec/gnubin
+    foreach binary [glob -tails -directory ${destroot}${prefix}/bin g*] {
+        ln -s ${prefix}/bin/${binary} ${destroot}${prefix}/libexec/gnubin/[string range $binary 1 end]
     }
 }
