--- a/dports/textproc/gsed/Portfile
+++ b/dports/textproc/gsed/Portfile
@@ -6,6 +6,7 @@ PortSystem      1.0
 name            gsed
 set my_name     sed
 version         4.2.1
+revision        1
 categories      textproc
 platforms       darwin
 maintainers     nox openmaintainer
@@ -46,6 +47,11 @@ post-destroot {
     xinstall -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} AUTHORS BUGS COPYING ChangeLog NEWS README THANKS \
         ${destroot}${docdir}
+
+    xinstall -m 755 -d ${destroot}${prefix}/libexec/gnubin
+    foreach binary [glob -tails -directory ${destroot}${prefix}/bin g*] {
+        ln -s ${prefix}/bin/${binary} ${destroot}${prefix}/libexec/gnubin/[string range $binary 1 end]
+    }
 }
 
 test.run        yes
@@ -55,14 +61,4 @@ platform darwin 8 {
     # Bad things happen running 64-bit gsed on Tiger. Fine on Leopard.
     # See https://trac.macports.org/ticket/18297.
     supported_archs i386 ppc
-}
-
-variant with_default_names description {Install files without 'g' prefix} {
-    post-destroot {
-        foreach {d} {bin share/info share/man/man1} {
-            foreach {f} [glob -tails -directory ${destroot}${prefix}/${d} g*] {
-                ln -sf ${prefix}/${d}/${f} ${destroot}${prefix}/${d}/[string range ${f} 1 end]
-            }
-        }
-    }
 }
