--- a/dports/sysutils/gwhich/Portfile
+++ b/dports/sysutils/gwhich/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 name            gwhich
 version         2.20
+revision        1
 categories      sysutils
 maintainers     nomaintainer
 description     GNU Which - Everything you never wanted in a which
@@ -29,17 +30,11 @@ configure.args  --infodir=${prefix}/share/info \
 
 post-destroot {
     file rename ${destroot}${prefix}/share/info/which.info ${destroot}${prefix}/share/info/gwhich.info
-    if {[variant_isset with_default_names]} {
-        foreach d {bin share/info share/man/man1} {
-            foreach a [glob -directory ${destroot}${prefix}/$d g*] {
-                regexp /g(.+)\$ $a dummy b
-                file link -hard ${destroot}${prefix}/$d/$b $a
-            }
-        }
+    xinstall -m 755 -d ${destroot}${prefix}/libexec/gnubin
+    foreach binary [glob -tails -directory ${destroot}${prefix}/bin g*] {
+        ln -s ${prefix}/bin/${binary} ${destroot}${prefix}/libexec/gnubin/[string range $binary 1 end]
     }
 }
 
 test.run        yes
 test.target     check
-
-variant with_default_names {}
