--- a/dports/math/atlas/Portfile
+++ b/dports/math/atlas/Portfile
@@ -34,13 +34,11 @@ patchfiles          patch-ATL_AVgcc-fix.diff \
                     patch-archinfo_freebsd.c.diff \
                     patch-SpewMakeInc.c.diff
 
-dist_subdir         ${name}/${version}_${revision}
-
-checksums           atlas${version}.tar.bz2 \
+checksums           $atlasdist \
                     md5     6c13be94a87178e7582111c08e9503bc \
                     sha1    c7546210df4796457d9e96a00444adc4c0f2e77f \
                     rmd160  0425e630d9d0c5b7aae81427a41b7eaa18447e90 \
-                    lapack-${lapackversion}.tgz \
+                    $lapackdist \
                     md5     10832891c9e8100f81108c1ec7da0da4 \
                     sha1    a434c45932f6affb654b3abde21dd669f5751633 \
                     rmd160  62426f2f360b2c438853ee6230da08f1f23dfd5b
