--- a/dports/comms/gnokii/Portfile
+++ b/dports/comms/gnokii/Portfile
@@ -29,7 +29,7 @@ master_sites            http://gnokii.org/download/gnokii/ \
 checksums               md5 fd0ae7996a2e2a2c29e9f3c625df8f3d \
                 sha1 a7c6f9fa56bfe01e3c8e719bb8585a24469fe1e7
 
-depends_build           port:p5-xml-parser
+depends_build           port:intltool
 depends_lib             port:gtk2 port:libical port:libusb-compat port:iso-codes port:readline
 
 patchfiles      fink-fixes.diff
