pgf:  * update to 2.10  * new distname, without containing folder  * use $texlive_texmfports  * fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73590 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/pgf/Portfile
+++ b/dports/tex/pgf/Portfile
@@ -5,8 +5,7 @@ PortSystem          1.0
 PortGroup           texlive 1.0
 
 name                pgf
-version             2.00
-revision            1
+version             2.10
 categories          tex textproc
 platforms           darwin
 maintainers         snc openmaintainer
@@ -19,27 +18,30 @@ long_description \
 
 homepage            http://pgf.sourceforge.net/
 master_sites        sourceforge:pgf
-checksums           md5     fb8cb62462f8248e327bf23ee5b9ccda \
-                    sha1    8c50ac3196380d164105ec96646c8e9424faa63c \
-                    rmd160  b7b18fded6ba819c2d79e7b0740d7fdfd0b9c94c
-
-livecheck.regex     <title>pgf version (.*) released.*</title>
+use_zip             yes
+distname            ${name}_${version}.tds
+checksums           md5     5c889766951078bc6fc8198af0b45000 \
+                    sha1    cab36cd20aa8f34d2f57acf9d48aa872d5a4e24e
 
 depends_lib         bin:texhash:texlive-basic
+
+extract.mkdir       yes
 
 use_configure       no
 build { }
 
 destroot {
-    set r ${workpath}/${name}-${version}
-    file mkdir ${destroot}${texlive_texmflocal}/tex
-    file copy ${r}/latex ${destroot}${texlive_texmflocal}/tex/
-    file copy ${r}/generic ${destroot}${texlive_texmflocal}/tex/
-    file copy ${r}/context ${destroot}${texlive_texmflocal}/tex/
-    file copy ${r}/plain ${destroot}${texlive_texmflocal}/tex/
-    file copy ${r}/doc ${destroot}${texlive_texmflocal}/
+    set r ${workpath}/${name}_${version}.tds
+    file mkdir ${destroot}${texlive_texmfports}/
+    file copy ${r}/doc ${destroot}${texlive_texmfports}/
+    file copy ${r}/scripts ${destroot}${texlive_texmfports}/
+    file copy ${r}/source ${destroot}${texlive_texmfports}/
+    file copy ${r}/tex ${destroot}${texlive_texmfports}/
 }
 
 post-activate {
     system "texhash"
 }
+
+livecheck.url       http://sourceforge.net/api/file/index/project-id/142562/mtime/desc/rss
+livecheck.regex     ${name}\\/version (\\d+\\.\\d+)
