sdcc: update to 3.0.0, add dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@73592 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sdcc/Portfile
+++ b/dports/lang/sdcc/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name                sdcc
-version             2.9.0
+version             3.0.0
 categories          lang
 platforms           darwin
 #license             GPLv3
@@ -17,9 +17,12 @@ long_description    SDCC is a freeware, retargettable, optimizing ANSI C \
 
 homepage            http://sdcc.sourceforge.net/
 master_sites        sourceforge
-checksums           md5     a6151ed328fd3bc48305ffbc628dc122 \
-                    sha1    03308a233a67e7fdce3f7e4972acb8731ae42666 \
-                    rmd160  38f23365b676132651f0322779bff498eb7e2b8d
+checksums           md5     20fbd49a3421e09fe65577c45524c89e \
+                    sha1    5f50f3841d58c10432bc4352e06a3f1b1f339ec1 \
+
+depends_build       port:gputils
+depends_lib         port:readline
+
 use_bzip2           yes
 distfiles           ${name}-src-${version}${extract.suffix}
 
