Fix for hgimportsvn failure complaining about untracked files.
c.f. http://bitbucket.org/andialbrecht/hgsvn/issue/90.


git-svn-id: https://svn.macports.org/repository/macports/trunk@73593 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-hgsvn/Portfile
+++ b/dports/python/py26-hgsvn/Portfile
@@ -5,7 +5,7 @@ PortGroup         python26 1.0
 
 name                    py26-hgsvn
 version                 0.1.8
-revision                1
+revision                2
 categories              python devel
 platforms               darwin
 maintainers             snc openmaintainer
@@ -25,7 +25,8 @@ depends_lib             port:mercurial \
                         port:subversion \
                         port:py26-distribute
 
-patchfiles              patch-hgsvn-ui.py.diff
+patchfiles              patch-hgsvn-ui.py.diff \
+                        patch-hgsvn-run-hgpullsvn.py.diff
 
 post-extract            { file copy ${filespath}/ez_setup.py ${worksrcpath} }
 
