rexx: disable parallel build to fix build failure reported in #27384
git-svn-id: https://svn.macports.org/repository/macports/trunk@73595 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/rexx/Portfile
+++ b/dports/lang/rexx/Portfile
@@ -24,6 +24,8 @@ worksrcdir		Regina-${version}
 
 configure.args	--mandir=${prefix}/share/man
 
+use_parallel_build	no
+
 destroot.destdir	prefix=${destroot}${prefix} \
 					mandir=${destroot}${prefix}/share/man
 post-destroot	{
