--- a/dports/lang/rexx/Portfile
+++ b/dports/lang/rexx/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			rexx
-version			3.4
+version			3.5
 categories		lang
 platforms		darwin
 maintainers		nomaintainer
@@ -16,11 +16,11 @@ long_description	Regina is an implementation of the 1996 ANSI Standard for \
 homepage		http://regina-rexx.sourceforge.net/
 master_sites	sourceforge:regina-rexx
 distname		Regina-REXX-${version}
-checksums		md5 3300e28b39134211a45aedb0e760cd44 \
-				sha1 296b56f20f9fbbe2f6c6ca00fca6ad20474d55b0 \
-				rmd160 2db4f92cc5f3b476a97b67a66cf4797381ad9ce7
 
-worksrcdir		Regina-${version}
+checksums		sha1 b42c8483658a935b62e935c478470f0e81b4ebf5 \
+				rmd160 f7170c07904d762d9d8a6f8f8730a61abb0889f3
+
+patchfiles			patch-configure.diff
 
 use_parallel_build	no
 
