New silent version.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73598 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/oorexx/Portfile
+++ b/dports/lang/oorexx/Portfile
@@ -6,9 +6,10 @@ PortSystem	    1.0
 
 name		    oorexx
 version		    4.0.1
+revision	    1
 categories	    lang
 platforms	    darwin
-maintainers	    krischik
+maintainers	    openmaintainer krischik
 description	    Open Object Rexx is an interpreter for the Rexx language
 long_description    ooRexx is an object orientated extension to			\
 		    the Rexx language. Rexx is designed to be an easily		\
@@ -18,12 +19,13 @@ long_description    ooRexx is an object orientated extension to			\
 homepage	    http://oorexx.sourceforge.net/
 master_sites	    sourceforge:oorexx
 distname	    ooRexx-${version}.source
+worksrcdir	    ooRexx-${version}
 use_parallel_build  yes
-extract.mkdir	    yes
+extract.mkdir	    no
 
-checksums           md5     da3da02e0e91343efb3eca731e793b16 \
-                    sha1    1e805bd8c8164f8afe79b860fcd22e027f0bfa57 \
-                    rmd160  2ef1251fc20d5ebaeb25fbf375a971f64a546c05
+checksums           md5     12728847478a5219efc988c69f6f12c8 \
+                    sha1    ce22a3caf3f69ae753cccc2904289ee65cd47934 \
+                    rmd160  ffe481d70f76f8c895736f0893c90036556b60fa
 
 post-activate {
     ui_msg "#########################################################################################"
