add xz support, fix python versioning
git-svn-id: https://svn.macports.org/repository/macports/trunk@73599 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/rpm50/Portfile
+++ b/dports/sysutils/rpm50/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name			rpm50
 version			5.0.3
-revision        1
+revision		2
 platforms		darwin freebsd linux
 categories		sysutils archivers
 maintainers		mac.com:n3npq afb
@@ -16,9 +16,11 @@ long_description	The RPM Package Manager (RPM) is a powerful command line driven
 			the package like its version, a description, etc.
 
 homepage		http://rpm5.org
-master_sites		${homepage}/files/rpm/rpm-5.0
+master_sites		${homepage}/files/rpm/rpm-5.0/
 distname		rpm-${version}
-checksums		md5 b3df4e54e84cf3344ce6b76fa2a8d5bf
+checksums		md5 b3df4e54e84cf3344ce6b76fa2a8d5bf \
+			sha1 d3461710de17a8f7dc3e49371d7edf620b10c27e \
+			rmd160 d26cdfef5a3bf18442e1825d810afb32bcfa2161
 worksrcdir		rpm-${version}
 
 depends_build		port:expat port:neon \
@@ -27,21 +29,32 @@ depends_build		port:expat port:neon \
 			port:libiconv port:gettext
 
 depends_lib		lib:libhistory.5:readline port:gettext \
-			port:popt port:sqlite3 port:xar
+			port:popt port:sqlite3 port:xar port:liblzma port:pcre
 
 depends_run		port:openssl \
 			bin:gzip:gzip \
                         bin:bzip2:bzip2 \
                         bin:unzip:unzip
 
-patchfiles		patch-macros.in
+patchfiles		patch-macros.in patch-xz-support patch-configure.ac
+post-patch {
+	reinplace "s:AC_DEFUN:m4_define:g" ${worksrcpath}/configure.ac
+	reinplace "s:pkgincHEADERS_INSTALL:INSTALL_HEADER:" ${worksrcpath}/rpmdb/Makefile.am
+	reinplace "s:pkglibPROGRAMS_INSTALL:INSTALL_PROGRAM:g" ${worksrcpath}/tools/Makefile.am
+}
 
 build.type		gnu
+
+depends_build-append	port:autoconf port:automake port:libtool port:gettext
+pre-configure {
+	system "cd ${worksrcpath}; ./autogen.sh"
+}
 
 configure.args		--disable-nls --without-javaglue --without-included-gettext \
 			--with-libintl-prefix=${prefix} --with-libiconv-prefix=${prefix} \
 			--mandir=${prefix}/share/man --infodir=${prefix}/share/info \
-			--with-python=2.5 --with-perl --with-sqlite --with-dbapi=sqlite --with-xar=external \
+			--with-python=2.5 --with-perl --with-sqlite --with-dbapi=sqlite \
+			--with-xar=external --with-xz=external --with-pcre=external \
 			--without-apidocs --sysconfdir=${prefix}/etc --with-path-cfg=${prefix}/etc/rpm
 configure.env		__PYTHON=${prefix}/bin/python2.5 __PERL=${prefix}/bin/perl5.8
 
