--- a/dports/sysutils/rpm52/Portfile
+++ b/dports/sysutils/rpm52/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			rpm52
-version			5.2.0
+version			5.2.1
 revision		2
 platforms		darwin freebsd linux
 categories		sysutils archivers
@@ -18,9 +18,9 @@ long_description	The RPM Package Manager (RPM) is a powerful command line driven
 homepage		http://rpm5.org
 master_sites		${homepage}/files/rpm/rpm-5.2/
 distname		rpm-${version}
-checksums		md5 9126c960be02f2b0d6068801aa27fde7 \
-			sha1 45031ea461738f081559082d35ce80fcfea822e6 \
-			rmd160 0d4c3cfe5781608325a3269fe00fd5fa071c284e
+checksums		md5 71f825ede4a2ddc191132ae017c9a6e4 \
+			sha1 77f2d1b24301ed3743d8bbc57e57710c0eff7bc8 \
+			rmd160 a66017c6b8a7e0a1de6be945e3823a7ab2051c75
 worksrcdir		rpm-${version}
 
 depends_build		port:expat port:neon \
@@ -37,11 +37,7 @@ depends_run		port:openssl \
                         bin:bzip2:bzip2 \
                         bin:unzip:unzip
 
-patchfiles		patch-macros.in patch-jsstddef.h patch-jsprf.c
-
-post-patch {
-	file copy ${worksrcpath}/js/src/jsfile.msg ${worksrcpath}/js/rpmjsfile.msg
-}
+patchfiles		patch-macros.in
 
 build.type		gnu
 
@@ -106,4 +102,20 @@ variant docs description "API documentation" {
 	depends_run-append bin:doxygen:doxygen
 	configure.args-delete --without-apidocs
 	configure.args-append --with-apidocs
+}
+
+variant python26 description { use python 2.6 instead of python 2.5 } {
+	depends_lib-delete	port:python25
+	depends_lib-append	port:python26
+	configure.args-delete	--with-python=2.5
+	configure.args-append	--with-python=2.6
+	configure.env-delete	__PYTHON=${prefix}/bin/python2.5
+	configure.env-append	__PYTHON=${prefix}/bin/python2.6
+}
+
+variant perl5_10 description { use perl 5.10 instead of perl 5.8 } {
+	depends_lib-delete	port:perl5.8
+	depends_lib-append	port:perl5.10
+	configure.env-delete	__PERL=${prefix}/bin/perl5.8
+	configure.env-append	__PERL=${prefix}/bin/perl5.10
 }
