--- a/dports/x11/Xaw3d/Portfile
+++ b/dports/x11/Xaw3d/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 
 name                    Xaw3d
 version                 1.5E
-revision                4
+revision                5
 categories              x11
 maintainers             nomaintainer
 
@@ -30,6 +30,8 @@ master_sites            freebsd \
 checksums               md5 29ecfdcd6bcf47f62ecfd672d31269a1 \
                         sha1 efc5b923feda52866c859c59a5b553cb675a69d1 \
                         rmd160 086cbabaa45ce5c110815aea24eebcbb54613118
+
+depends_build           port:imake
 
 depends_lib \
 	port:xorg-libsm \
