uncrustify: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73607 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/uncrustify/Portfile
+++ b/dports/devel/uncrustify/Portfile
@@ -19,4 +19,7 @@ checksums       md5 991ee882a265fa28f23f747737bce740 \
                 sha1 9a32802c25724f36d1210e672217bda00f87a9ca \
                 rmd160 84042387cc843455c8c9d2ecf98eaa9943a65ca6
 
-livecheck.version   ${name}-${version}
+livecheck.type    regex
+livecheck.url     http://sourceforge.net/projects/uncrustify/files/
+livecheck.regex   "(0\\.\\d+)"
+
