oorexx: change dist_subdir to avoid checksum errors for those already having the old distfile, and for the mirror servers
git-svn-id: https://svn.macports.org/repository/macports/trunk@73608 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/oorexx/Portfile
+++ b/dports/lang/oorexx/Portfile
@@ -18,6 +18,7 @@ long_description    ooRexx is an object orientated extension to			\
 
 homepage	    http://oorexx.sourceforge.net/
 master_sites	    sourceforge:oorexx
+dist_subdir         ${name}/${version}_1
 distname	    ooRexx-${version}.source
 worksrcdir	    ooRexx-${version}
 use_parallel_build  yes
