--- a/dports/editors/bluefish/Portfile
+++ b/dports/editors/bluefish/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 
 name                    bluefish
 conflicts               bluefish-devel
-version                 2.0.1
+version                 2.0.2
 categories              editors www
 platforms               darwin
 maintainers             nomaintainer
@@ -21,25 +21,28 @@ distname                bluefish-${version}
 master_sites            sourceforge:bluefish \
                         http://www.bennewitz.com/bluefish/stable/source/
 
-checksums               md5     9b672411369bd580421f832214bf65b3 \
-                        sha1    5e00afd98cc65b41140188525031bba39c196e91 \
-                        rmd160  86d0aa91faf0dbeef2d15d258005513defd746c2
+checksums               md5     0229a3fb1d68c926391761efbe12eb1b \
+                        sha1    4483b4f011d2f227fd0235512330162447a68201 \
+                        rmd160  f44e9a95d563aa607d49305fadcc0031e8512700
 
 use_bzip2               yes
+
+depends_build           port:pkgconfig
 
 depends_lib             port:gtk2 \
                         port:libxml2 \
                         port:enchant \
-                        port:pcre
+                        port:gucharmap
 
 configure.args          --mandir=${prefix}/share/man \
                         --infodir=${prefix}/share/info \
                         --sysconfdir=${prefix}/etc \
                         --with-icon-path=${prefix}/share/pixmaps \
                         --without-freedesktop_org-menu \
-                        --without-freedesktop_org-mime \
-                        --without-gnome2_4-mime \
-                        --without-gnome2_4-appreg
+                        --without-freedesktop_org-mime
+
+configure.env-append    CHARMAP_PLUGIN_CFLAGS="[exec ${prefix}/bin/pkg-config --cflags gucharmap-2]" \
+                        CHARMAP_PLUGIN_LIBS="[exec ${prefix}/bin/pkg-config --libs gucharmap-2]"
 
 destroot.destdir        DESTDIR=${destroot}
 
