drivel: update to version 3.0.2, dependencies, fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73613 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/drivel/Portfile
+++ b/dports/gnome/drivel/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		drivel
-version		2.0.4
+version		3.0.2
 description	Drivel is a GNOME client for working with online journals, weblogs or just blogs.
 long_description \
                 Drivel is a GNOME client for working with online journals, also known as weblogs \
@@ -18,17 +18,16 @@ master_sites    sourceforge
 
 use_bzip2	yes
 
-checksums       md5     9e6e4b2eb0912669461eb338d2bdc08d \
-                sha1    8524d274c72264414c43d42ad4236edc501326d6 \
-                rmd160  28221060427d1a2cf7915f592b1ca9f01a33e145
+checksums       md5     0d993bffb0cad23e6262958eff4aab60 \
+                sha1    c6e3641c8351d5fd3626d9990193691cf70a9db4 \
+                rmd160  355d39cdde9c33030e97658d6529ac666eb1f596
 
 depends_build   port:pkgconfig \
                 port:intltool
                 
-depends_lib     port:libgnomeui \
-                port:gtksourceview \
+depends_lib     port:libsoup \
                 port:gtkspell2 \
-                port:curl
+                port:gtksourceview2
 
 configure.args  --disable-mime-update \
                 --disable-desktop-update \
@@ -41,4 +40,5 @@ post-activate {
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
-livecheck.regex "(?i)<title>drivel .* (\\d+(?:\\.\\d+)*) released.*</title>"
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
