--- a/dports/graphics/libspiro/Portfile
+++ b/dports/graphics/libspiro/Portfile
@@ -24,3 +24,6 @@ distfiles       ${name}_src-${version}${extract.suffix}
 checksums       md5     ab6aaa50bbd8fa55e78f8b8b0112f6cd \
                 sha1    d8b407b835b35289af2914877a4c6000b4fdd382 \
                 rmd160  5dc639af56ad330ca8948d7305aff5ae8081ac1a
+
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}_src-(\\d+(?:\\.\\d+)*)${extract.suffix}"
