--- a/dports/textproc/libwpd/Portfile
+++ b/dports/textproc/libwpd/Portfile
@@ -33,4 +33,5 @@ variant with_doxygen description {Build documentation with doxygen} {
 	configure.args-delete	--without-docs
 }
 
-livecheck.regex         <title>${name} ${name}-(\[0-9.\]+) released.*</title>
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}-(0.8(?:\\.\\d+)*)${extract.suffix}"
