libwpg: whitespace, fix livecheck, restrict to 0.1 branch as required by inkscape.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73616 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/libwpg/Portfile
+++ b/dports/graphics/libwpg/Portfile
@@ -20,10 +20,9 @@ long_description \
     and Presentations(tm). Distributed under the LGPL license, libwpg can be used in free \
     and commercial software.
 
-checksums \
-    md5     db556b750bf3eac8481a4cc5e29e5af1 \
-    sha1    6d350eb0ad57b97499ef8335506f172b0c21375a \
-    rmd160  6e9e0545215af2ee05780887ad57ca1ae7ef78f5
+checksums               md5     db556b750bf3eac8481a4cc5e29e5af1 \
+                        sha1    6d350eb0ad57b97499ef8335506f172b0c21375a \
+                        rmd160  6e9e0545215af2ee05780887ad57ca1ae7ef78f5
 
 depends_build \
     port:pkgconfig
@@ -31,4 +30,5 @@ depends_build \
 depends_lib \
     port:libwpd
 
-livecheck.regex         <title>${name} ${name}-(\[0-9.\]+) released.*</title>
+livecheck.url           http://sourceforge.net/projects/${name}/files/
+livecheck.regex         "${name}-(0.1(?:\\.\\d+)*)${extract.suffix}"
