p5-text-tabsxwrap: whitespace changes / reformatting / add modeline; see #27389
git-svn-id: https://svn.macports.org/repository/macports/trunk@73617 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-text-tabsxwrap/Portfile
+++ b/dports/perl/p5-text-tabsxwrap/Portfile
@@ -1,13 +1,17 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
-PortSystem 1.0
-PortGroup perl5 1.0
 
-perl5.setup		Text-Tabs+Wrap 2006.0711
-name			p5-text-tabsxwrap
-maintainers		nomaintainer
-description		Line wrapping to form simple paragraphs
-long_description	${description}
-checksums		md5 0fe19b3fc2bac99374fe884b07bb3197
-platforms		darwin
+PortSystem          1.0
+PortGroup           perl5 1.0
 
-supported_archs noarch
+perl5.setup         Text-Tabs+Wrap 2006.0711
+name                p5-text-tabsxwrap
+platforms           darwin
+maintainers         nomaintainer
+supported_archs     noarch
+
+description         Line wrapping to form simple paragraphs
+
+long_description    ${description}
+
+checksums           md5     0fe19b3fc2bac99374fe884b07bb3197
