qjackctl: fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73618 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/qjackctl/Portfile
+++ b/dports/audio/qjackctl/Portfile
@@ -32,4 +32,5 @@ configure.args-append --with-qt=${prefix}/libexec/qt4-x11 \
                       --with-jack=${prefix} \
                       --disable-alsa-seq
 
-livecheck.regex "<title>qjackctl \\(stable\\) (.*) released.*</title>"
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
