--- a/dports/perl/p5-calendar-simple/Portfile
+++ b/dports/perl/p5-calendar-simple/Portfile
@@ -3,15 +3,17 @@
 PortSystem 1.0
 PortGroup perl5 1.0
 
-perl5.setup		Calendar-Simple 1.20
+perl5.setup		Calendar-Simple 1.21
 maintainers		nomaintainer
+supported_archs         noarch
+
 description		Perl extension to create simple calendar
 long_description	${description}
 
 perl5.use_module_build
 depends_build-append  port:p5-test-simple
-checksums       md5     8f67dc77caba570339ada69b453b2a1d \
-                sha1    461490908534a073d2665109094ff1a4cb3b361f \
-                rmd160  f74211e40928f9ffd2a9a73017b68110bc98cdcc
+
+checksums               sha1    a61ad8b1c9032862598b0d3987905c276e1ef6c6 \
+                        rmd160  069a3791321272dbb7d414ac8ef7fd9eba707817
 
 platforms		darwin
