p5-chart: update to 2.4.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@73621 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-chart/Portfile
+++ b/dports/perl/p5-chart/Portfile
@@ -2,14 +2,16 @@
 
 PortSystem			1.0
 PortGroup			perl5 1.0
-perl5.setup			Chart 2.4.1
+
+perl5.setup			Chart 2.4.2
 maintainers			nomaintainer
 description			Create png/jpeg images with charts
 long_description	${description}
 
 platforms			darwin
 
-checksums			md5 5e7a80badfb8bf6e29b21879689bcc2f
+checksums           sha1    b53247befbeec35a87cc530e1c7fe3ee02aae46b \
+                    rmd160  3dea72077e325b9f06bcff82f6296639bc65c3d8
 
 depends_lib-append			port:p5-gd
 
