--- a/dports/perl/p5-calendar-simple/Portfile
+++ b/dports/perl/p5-calendar-simple/Portfile
@@ -1,19 +1,21 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
-PortGroup perl5 1.0
+PortSystem              1.0
+PortGroup               perl5 1.0
 
-perl5.setup		Calendar-Simple 1.21
-maintainers		nomaintainer
+perl5.setup             Calendar-Simple 1.21
+platforms               darwin
+maintainers             nomaintainer
 supported_archs         noarch
 
-description		Perl extension to create simple calendar
-long_description	${description}
+description             Perl extension to create simple calendar
+
+long_description        ${description}
 
 perl5.use_module_build
-depends_build-append  port:p5-test-simple
+
+depends_build-append    port:p5-test-simple
 
 checksums               sha1    a61ad8b1c9032862598b0d3987905c276e1ef6c6 \
                         rmd160  069a3791321272dbb7d414ac8ef7fd9eba707817
-
-platforms		darwin
