p5-chart: whitespace changes / reformatting / add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@73623 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-chart/Portfile
+++ b/dports/perl/p5-chart/Portfile
@@ -1,18 +1,19 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem			1.0
-PortGroup			perl5 1.0
+PortSystem          1.0
+PortGroup           perl5 1.0
 
-perl5.setup			Chart 2.4.2
-maintainers			nomaintainer
-description			Create png/jpeg images with charts
-long_description	${description}
+perl5.setup         Chart 2.4.2
+platforms           darwin
+maintainers         nomaintainer
+supported_archs     noarch
 
-platforms			darwin
+description         Create png/jpeg images with charts
+
+long_description    ${description}
 
 checksums           sha1    b53247befbeec35a87cc530e1c7fe3ee02aae46b \
                     rmd160  3dea72077e325b9f06bcff82f6296639bc65c3d8
 
-depends_lib-append			port:p5-gd
-
-supported_archs noarch
+depends_lib-append  port:p5-gd
