p5-text-tabsxwrap: update to 2009.0305, update description and license, new maintainer; see #27389
git-svn-id: https://svn.macports.org/repository/macports/trunk@73626 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-text-tabsxwrap/Portfile
+++ b/dports/perl/p5-text-tabsxwrap/Portfile
@@ -4,14 +4,29 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Text-Tabs+Wrap 2006.0711
+perl5.setup         Text-Tabs+Wrap 2009.0305
 name                p5-text-tabsxwrap
 platforms           darwin
-maintainers         nomaintainer
+maintainers         l2g.to:larry+macports
 supported_archs     noarch
+
+# License: "This module may be modified, used, copied, and redistributed at
+# your own risk.  Publicly redistributed modified versions must use a different
+# name."
+license             OSI-Approved
 
 description         Line wrapping to form simple paragraphs
 
-long_description    ${description}
+long_description    Text::Tabs performs the same job that the unix expand(1) \
+                    and unexpand(1) commands do: adding or removing tabs from \
+                    a document. \
+                    \n\
+                    \nText::Wrap::wrap() will reformat lines into paragraphs. \
+                    All it does is break up long lines, it will not join \
+                    short lines together. \
+                    \n\
+                    \nText::Fill::fill() will reformat blocks of text into \
+                    paragraphs. It uses Text::Wrap::wrap() to do the work.
 
-checksums           md5     0fe19b3fc2bac99374fe884b07bb3197
+checksums           sha1    bf588abea7542feede5a082e13bd2b679ad1ace8 \
+                    rmd160  4cd695f413ad1157d8d7646b46ef1620d8d26ddf
