gramps: update to version 3.2.5, remove outdated notes.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73627 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gramps/Portfile
+++ b/dports/gnome/gramps/Portfile
@@ -4,8 +4,7 @@
 PortSystem                      1.0
 
 name                            gramps
-version                         3.2.4
-revision                        1
+version                         3.2.5
 categories                      gnome science python genealogy
 platforms                       darwin
 maintainers                     devans openmaintainer
@@ -19,23 +18,20 @@ long_description                GRAMPS is a genealogy program to store, edit, \
 
 notes \
 "
-        NOTE 1: Some users have experienced problems importing databases
-                from Gramps version 2 or from 3.1.x. It is advised that
-                databases are exported from Gramps version 2 in Gramps
-                XML format before updating to Gramps version 3.
-                The Gramps XML export from version 2 can then be imported
-                into gramps 3 if the automatic database upgrade does not work.
-
-        NOTE 2: The WriteCD plugin is unavailable. This relies on GNOME and
-                has not yet been made to work on OS X.
+NOTE: Some users have experienced problems importing databases
+      from Gramps version 2 or from 3.1.x. It is advised that
+      databases are exported from Gramps version 2 in Gramps
+      XML format before updating to Gramps version 3.
+      The Gramps XML export from version 2 can then be imported
+      into gramps 3 if the automatic database upgrade does not work.
 "
 
 homepage                        http://www.gramps-project.org/
 master_sites                    sourceforge:gramps
 
-checksums                       md5     b04a078ca9986ff7a3027676df93c30f \
-                                sha1    3ea74cefd9ffc00b050c95460927b8a41b68c9ed \
-                                rmd160  2aa62b9f537893741b14b52f8c85ab9e7b2100d2
+checksums                       md5     6f6636e548dbf9f833b83bb8331d2762 \
+                                sha1    80f6284af8fd1290b16f6db17d4867e4a6e027d4 \
+                                rmd160  e474f2bd2d861babe3512004a8a16eecd337db3c
 
 patchfiles                      patch-configure.diff
 
