--- a/dports/comms/telepathy-mission-control/Portfile
+++ b/dports/comms/telepathy-mission-control/Portfile
@@ -38,4 +38,4 @@ configure.args  --enable-gnome-keyring
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
-livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.regex "${name}-(\[0-9\]+\\.\[0-9\]*\[02468\]\\.\[0-9\]+)"
