Xaw3d: add comment about unusual revision handling due to recent revision decrement
git-svn-id: https://svn.macports.org/repository/macports/trunk@73631 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/Xaw3d/Portfile
+++ b/dports/x11/Xaw3d/Portfile
@@ -4,6 +4,8 @@ PortSystem              1.0
 
 name                    Xaw3d
 version                 1.5E
+# The revision was increased to 5 in r73602 then reverted to 4 in r73629.
+# If you increase the revision again, skip 5 and go to 6, and remove this comment.
 revision                4
 categories              x11
 maintainers             nomaintainer
