hunspell: update to version 1.2.12, fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73632 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/hunspell/Portfile
+++ b/dports/textproc/hunspell/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name                        hunspell
-version                     1.2.8
-revision                    1
+version                     1.2.12
 license                     GPL-2.0+ LGPL-2.1+ MPL-1.1+
 categories                  textproc
 maintainers                 nomaintainer
@@ -20,9 +19,9 @@ long_description            Hunspell is a spell checker and morphological analyz
 
 master_sites                sourceforge
 
-checksums                   md5 1177af54a09e320d2c24015f29c3a93e \
-                            sha1  eaa76f82fcf08678e49f7a30afdaa268bcc75235 \
-                            rmd160 e4fd39e5fadf96da1311f2aa7163ec17eacf0f83
+checksums                   md5     5ef2dc1026660d0ffb7eae7b511aee23 \
+                            sha1    0a2ab4b1e15c3dad3f05f474d1ae15ee361c35f8 \
+                            rmd160  43bdf7c06d06e8f983b7cce88e71df833c22cd13
 
 patchfiles                  patch-hunspell.cxx.diff
 
@@ -60,3 +59,6 @@ if {[variant_isset universal]} {
 notes \
 "You must install (at least) one of the language dictionaries after
 installing this port in order for it to work."
+
+livecheck.url   http://sourceforge.net/projects/${name}/files/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
