PlasmaShop: add description
git-svn-id: https://svn.macports.org/repository/macports/trunk@73635 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/PlasmaShop/Portfile
+++ b/dports/devel/PlasmaShop/Portfile
@@ -12,6 +12,16 @@ maintainers                 ryandesign
 license                     GPL-3+
 homepage                    http://alcugs.almlys.org/PlasmaShop
 
+description                 tool for inspecting and manipulating Plasma game files
+
+long_description            ${name} is a tool for inspecting and manipulating \
+                            the files that make up games based on the Plasma \
+                            engine, such as Myst Online: URU Live. It can do \
+                            many age-related tasks that lie outside of what \
+                            the PRP Blender Plugin can do: create PAK files, \
+                            decompyle/compile Python scripts, sum age files, \
+                            etc.
+
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/PlasmaShop/
 hg.tag                      4c278eea53d1
