Update to the 1.0.0-2.7.7-jdbc4 release.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73638 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/scala-migrations/Portfile
+++ b/dports/java/scala-migrations/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                    scala-migrations
-version                 0.9.2
+version                 1.0.0
 categories              java
 platforms               darwin
 maintainers             blair
@@ -32,11 +32,11 @@ long_description        Scala Migrations is a library to manage upgrades and \
 homepage                http://code.google.com/p/scala-migrations/
 
 master_sites            googlecode
-distfiles               ${name}-${version}.jar
+distfiles               ${name}-${version}-2.7.7-jdbc4.jar
 
-checksums               md5 26236e19a2c11f0441f817b0e2d61d8d \
-                        sha1 0b4a4ff0eaaef74e6ce9ff35fcd52b2e101abc9e \
-                        rmd160 079bca38e0684c12a74d0e2b846961701599f404
+checksums               md5 63d474af2389ed663b19b05026c193bc \
+                        sha1 649bf59cbdbb89dde732d5a8e4d449d819810b9c \
+                        rmd160 d6cc6167bf9c5faf22a80e90a9cc2a2fc8417d86
 extract.only
 
 depends_lib             bin:java:kaffe
@@ -49,5 +49,5 @@ destroot {
         set javadir ${destroot}${prefix}/share/java
 
         xinstall -d -m 755 ${javadir}
-        file copy ${distpath}/${name}-${version}.jar ${javadir}/${name}.jar
+        file copy ${distpath}/${name}-${version}-2.7.7-jdbc4.jar ${javadir}/${name}.jar
 }
