PlasmaShop: specify a default monospaced editor font for Mac OS X
git-svn-id: https://svn.macports.org/repository/macports/trunk@73639 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/PlasmaShop/Portfile
+++ b/dports/devel/PlasmaShop/Portfile
@@ -6,6 +6,7 @@ PortGroup                   qt4 1.0
 
 name                        PlasmaShop
 version                     3.0-127
+revision                    1
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -44,7 +45,7 @@ post-extract {
     }
 }
 
-patchfiles                  patch-prefix.diff patch-flags.diff
+patchfiles                  patch-prefix.diff patch-config.diff
 
 post-patch {
     foreach file ${files_being_patched} {
@@ -65,6 +66,15 @@ use_parallel_build          no
 universal_variant           no
 
 platform darwin {
+    if {${os.major} < 10} {
+        set font Monaco
+    } else {
+        set font Menlo
+    }
+    post-patch {
+        reinplace "s|@FONT@|${font}|g" ${worksrcpath}/config
+    }
+    
     # http://www.ogre3d.org/forums/viewtopic.php?t=9949#p71474
     configure.cflags-append     -DGL_GLEXT_LEGACY
     configure.cxxflags-append   -DGL_GLEXT_LEGACY
