--- a/dports/irc/supybot/Portfile
+++ b/dports/irc/supybot/Portfile
@@ -2,12 +2,13 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           python25 1.0
+PortGroup           python26 1.0
 
 name			    supybot
 version			    0.83.4.1
+revision            1
 categories		    irc python
-#license             BSD
+license             BSD
 maintainers		    snc openmaintainer
 description		    IRC bot framework in Python
 long_description	${description}
@@ -19,7 +20,26 @@ use_bzip2		    yes
 master_sites	    sourceforge
 distname		    Supybot-${version}
 checksums           md5     96ce90559c7d6fde5e3c93174c509408 \
-                    sha1    e9a0443557c82f983c6144d238a28d2ca83dc2d3 \
-                    rmd160  19fe768a0d814e902467f7e5aee31c04a3ab0024
+                    sha1    e9a0443557c82f983c6144d238a28d2ca83dc2d3
 
-livecheck.regex     "<title>supybot Supybot-(\\d+\\.\\d+\\.\\d+(\\.\\d+)?) released.*</title>"
+if {![variant_isset doc]} {
+    default_variants +doc
+}
+
+variant doc description {Install documentation} {
+}
+
+patch {
+    if {[variant_isset doc]} {
+        reinplace s|docs\/|${prefix}/share/${name}/docs/|g ${worksrcpath}/scripts/supybot
+    }
+}
+
+post-destroot {
+    if {[variant_isset doc]} {
+        xinstall -d ${destroot}${prefix}/share/${name}
+        file copy ${worksrcpath}/docs ${destroot}${prefix}/share/${name}/
+    }
+}
+
+livecheck.regex     Supybot-(\\d+(\\.\\d+)+)
