kmymoney4-devel: fixes for bugs 257375 and 257369 (cosmetic)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73647 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4-devel/Portfile
+++ b/dports/kde/kmymoney4-devel/Portfile
@@ -8,7 +8,7 @@ PortGroup           kde4    1.1
 
 fetch.type          svn
 svn.url             svn://anonsvn.kde.org/home/kde/trunk/extragear/office/kmymoney
-svn.revision        1197883
+svn.revision        1199066
 
 name                kmymoney4-devel
 version             4.5-${svn.revision}
@@ -41,10 +41,9 @@ This port is still EXPERIMENTAL.               \n \
 ============================================== \n \
                                                \n \
 So far known problems are:                     \n \
- - some reports let the app hang               \n \
- - some fonts seem to be missing, since        \n \
-\ \ layout looks a little inhomogenious        \n \
- - odd balance chart due to missing lines      \n \
+ - chart reports let the app hang              \n \
+ - app crashes after HBCI transaction download \n \
+ - balance and net worth charts w/o axis lines \n \
                                                \n \
 ============================================== \n \
 "
